--- a/Queries/Queries.csproj
+++ b/Queries/Queries.csproj
@@ -11,6 +11,9 @@
     <RepositoryUrl>https://github.com/ReneWiersma/Queries</RepositoryUrl>
     <PackageReleaseNotes>Contains a IQuery interfaces</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
